--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styles": "^6.4.11",
+    "@reduxjs/toolkit": "^2.7.0",
+    "firebase": "^11.6.0",
     "next": "15.3.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-material-ui-carousel": "^3.4.2",
-    "react-multi-carousel": "^2.8.6"
+    "react-multi-carousel": "^2.8.6",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
