--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.6",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
