--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styles": "^6.4.11",
     "@reduxjs/toolkit": "^2.7.0",
     "firebase": "^11.6.0",
+    "immer": "^10.1.1",
     "next": "15.3.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
